--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
     <body>
         <header>
             <div id="logo_header">
-                <img src="../images/logo/ohmyfood.png" alt="logo ohmyfood">
+                <img src="./images/logo/ohmyfood.png" alt="logo ohmyfood">
             </div>
             <div id="barre_de_recherche">
                 <form method="post" action="#">
@@ -49,7 +49,7 @@
                 <div id="section_restaurant_1_2">
                     <figure id="restaurant_1">
                         <a href="La palette du goût.html">
-                        <img src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+                        <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
                         <p class="nouveau">Nouveau</p>
                         <figcaption>
                             <h3>La palette du goût</h3>
@@ -64,7 +64,7 @@
                     </figure>
                     <figure id="restaurant_2">
                         <a href="La note enchantée.html">
-                        <img src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+                        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
                         <p class="nouveau">Nouveau</p>
                         <figcaption>
                             <h3>La note enchantée</h3>
@@ -81,7 +81,7 @@
                 <div id="section_restaurant_3_4">
                     <figure id="restaurant_3">
                         <a href="A la française.html">
-                        <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
+                        <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
                         <figcaption>
                             <h3>A la française</h3>
                             <div class="descirption_restaurant">
@@ -95,7 +95,7 @@
                     </figure>
                     <figure id="restaurant_4">
                         <a href="Le délice des sens.html">
-                        <img src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
+                        <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
                         <figcaption>
                             <h3>Le délice des sens</h3>
                             <div class="descirption_restaurant">
